# erpnext-chatwoot-formbricks

./: LICENSE  README.md  pyproject.toml
erpnext_chatwoot_formbricks/: __init__.py  hooks.py  install.py  modules.txt  patches.txt  uninstall.py
erpnext_chatwoot_formbricks/chatwoot/: __init__.py  api.py  contact.py  conversation.py  issue_sync.py  webhook.py
erpnext_chatwoot_formbricks/chatwoot/doctype/: __init__.py
erpnext_chatwoot_formbricks/chatwoot/doctype/chatwoot_conversation/: __init__.py  chatwoot_conversation.json  chatwoot_conversation.py
erpnext_chatwoot_formbricks/chatwoot/doctype/chatwoot_message/: __init__.py  chatwoot_message.json  chatwoot_message.py
erpnext_chatwoot_formbricks/chatwoot/doctype/chatwoot_settings/: __init__.py  chatwoot_settings.json  chatwoot_settings.py
erpnext_chatwoot_formbricks/common/: __init__.py  contact_sync.py  lead_creation.py  utils.py
erpnext_chatwoot_formbricks/formbricks/: __init__.py  api.py  response.py  webhook.py
erpnext_chatwoot_formbricks/formbricks/doctype/: __init__.py
erpnext_chatwoot_formbricks/formbricks/doctype/formbricks_response/: __init__.py  formbricks_response.json  formbricks_response.py
erpnext_chatwoot_formbricks/formbricks/doctype/formbricks_settings/: __init__.py  formbricks_settings.json  formbricks_settings.py
erpnext_chatwoot_formbricks/formbricks/doctype/formbricks_survey/: __init__.py  formbricks_survey.json  formbricks_survey.py
erpnext_chatwoot_formbricks/public/js/: customer.js  erpnext_chatwoot_formbricks.js  lead.js
